--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art</title>
+    <meta name="title" content="HTML Art" />
+    <meta name="description" content="A simple html art" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Dipankar Paul" />
+    <meta name="image" content="./image.png" />
+    <title>HTML Art</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
