--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A simple html art" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Dipankar Paul" />
-    <meta name="image" content="./image.png" />
+    <meta name="image" content="image.png" />
     <title>HTML Art</title>
     <link rel="stylesheet" href="style.css" />
   </head>
